<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#50F6EDED"
    android:layout_height="match_parent"
    tools:context=".Authentication.Login_Fragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_login"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
       android:background="@drawable/white_button"
        android:drawableStart="@drawable/google"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toStartOf="@id/facebook_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/top_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#50000000"
        android:fontFamily="@font/lato"
        android:text="@string/savor_the_taste_delivered_to_your_door"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/txt"
        android:textSize="30sp"
        android:textColor="#50F30808"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_txt" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:drawableStart="@drawable/mail_logo"
        android:textColor="@color/black"
        android:background="@drawable/text_style"
        android:drawablePadding="10dp"
        android:hint="@string/mail"
        android:textColorHint="#70000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_txt" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/lock_icon"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:textColorHint="#70000000"
        android:background="@drawable/text_style"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mail" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/or"
       android:textColor="#50000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with"
        android:textColor="#50F30808"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/google_login"
        app:layout_constraintEnd_toEndOf="@id/facebook_login"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:gravity="center"
        android:text="@string/login"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebook_login"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/white_button"
        android:drawableStart="@drawable/facebook_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/google_login"
        app:layout_constraintBottom_toBottomOf="@id/google_login"
        app:layout_constraintTop_toBottomOf="@id/textView3" />
    <TextView
        android:id="@+id/dhaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/google_login"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:textColor="#4CAF50"/>

    <TextView
        android:id="@+id/mnkd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/designed_by_mnkd"
        android:textColor="#200A0B0A"
        android:textStyle="italic"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>