<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#50F6EDED"
    android:backgroundTintMode="src_over"
    tools:ignore="MissingClass">

   <de.hdodenhof.circleimageview.CircleImageView
       android:id="@+id/SignUpimage"
       android:layout_width="150dp"
       android:layout_height="150dp"
       android:src="@drawable/logo"
       tools:layout_editor_absoluteX="106dp"
       tools:layout_editor_absoluteY="20dp"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="20dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent">

   </de.hdodenhof.circleimageview.CircleImageView>

   <TextView
       android:id="@+id/sign_up_text"
       android:layout_width="wrap_content"
       android:layout_height="40dp"
       android:fontFamily="@font/lato_bold"
       android:text="Sign Up"
       android:textColor="#50F30808"
       android:textSize="30sp"
       android:textStyle="bold"
       android:layout_marginTop="20dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/title">

   </TextView>
<TextView
   android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:textColor="#50000000"
   android:text="@string/savor_the_taste_delivered_to_your_door"
   app:layout_constraintTop_toBottomOf="@id/SignUpimage"
   app:layout_constraintStart_toStartOf="parent"
   app:layout_constraintEnd_toEndOf="parent"
   android:textSize="20sp"/>



   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/name"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:background="@drawable/text_style"
       android:layout_marginTop="10dp"
       android:fontFamily="@font/lato"
       android:hint="Full Name"
       android:drawableStart="@drawable/person_icon"
       android:drawablePadding="10dp"
       android:textColor="@color/black"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       android:textColorHint="#70000000"
       app:layout_constraintTop_toBottomOf="@id/sign_up_text"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent" />

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/Email"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:background="@drawable/text_style"
       android:hint="Email"
       android:drawableStart="@drawable/mail_logo"
       android:textColor="@color/black"
       android:textColorHint="#70000000"
       android:drawablePadding="10dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="10dp"
       android:layout_marginEnd="10dp"
       android:layout_marginStart="10dp"
       app:layout_constraintTop_toBottomOf="@id/name">

   </com.google.android.material.textfield.TextInputEditText>

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/password"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:background="@drawable/text_style"
       android:textColor="@color/black"
       android:hint="Password"
       android:drawableStart="@drawable/lock_icon"
       android:textColorHint="#70000000"
       app:layout_constraintTop_toBottomOf="@id/Email"
       android:drawablePadding="10dp"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginEnd="10dp"
       android:layout_marginStart="10dp"
       android:layout_marginTop="10dp"
       app:layout_constraintEnd_toEndOf="parent">

   </com.google.android.material.textfield.TextInputEditText>

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/cnfm_password"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:background="@drawable/text_style"
       android:textColor="@color/black"
       android:hint="Confirm password"
       android:drawableStart="@drawable/lock_icon"
       android:textColorHint="#70000000"
       android:drawablePadding="10dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="10dp"
       android:layout_marginEnd="10dp"
       android:layout_marginStart="10dp"
       app:layout_constraintTop_toBottomOf="@id/password">
</com.google.android.material.textfield.TextInputEditText>

   <android.widget.Button
       android:id="@+id/SignUpbtn"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:background="@drawable/button_shape"
       android:text="@string/sign_up"
       android:textSize="20sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="10dp"
       android:layout_marginEnd="10dp"
       android:layout_marginStart="10dp"
       app:layout_constraintTop_toBottomOf="@id/cnfm_password">

   </android.widget.Button>

   <android.widget.Button
       android:id="@+id/Signup_withGoogle"
       android:layout_width="50dp"
       android:layout_height="wrap_content"
       android:background="@drawable/white_button"
       android:drawableStart="@drawable/google"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="10dp"
       app:layout_constraintEnd_toStartOf="@id/Signup_withfacebook"
       app:layout_constraintTop_toBottomOf="@id/orsignupwith"
       >

   </android.widget.Button>

   <android.widget.Button
       android:id="@+id/Signup_withfacebook"
       android:layout_width="50dp"
       android:layout_height="wrap_content"
       android:background="@drawable/white_button"
       android:drawableStart="@drawable/facebook_icon"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="10dp"
       app:layout_constraintTop_toBottomOf="@id/orsignupwith"
       app:layout_constraintStart_toEndOf="@id/Signup_withGoogle">

   </android.widget.Button>

   <TextView
       android:id="@+id/already_have_account"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Already have an account?"
       android:textColor="#4CAF50"
       android:layout_marginTop="10dp"
       android:textSize="15sp"
       android:layout_marginStart="10dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/Signup_withGoogle"
       tools:layout_editor_absoluteX="10dp" />

   <TextView
       android:id="@+id/or"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/or"
       android:textColor="#50000000"
       android:textSize="18sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="10dp"
       app:layout_constraintTop_toBottomOf="@id/SignUpbtn" />
   <TextView
       android:id="@+id/orsignupwith"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Sign Up with"
       android:textSize="20sp"
       android:textColor="#50F30808"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/or" />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
     android:layout_marginStart="10dp"
      android:text="@string/designed_by_mnkd"
       android:textColor="#200A0B0A"
       android:textStyle="italic"
       android:layout_marginBottom="20dp"
      app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>